tyarith/parser.output
   0  $accept : %entry% $end

   1  toplevel : EOF
   2           | Command SEMI toplevel

   3  Command : Term

   4  Term : AppTerm
   5       | IF Term THEN Term ELSE Term
   6       | SWITCH Term CASE Zero COLON Term CASE SUCC Zero COLON Term

   7  Zero : INTV

   8  AppTerm : ATerm
   9          | SUCC ATerm
  10          | PRED ATerm
  11          | ISZERO ATerm

  12  ATerm : LPAREN Term RPAREN
  13        | TRUE
  14        | FALSE
  15        | INTV
  16        | AND ATerm ATerm
  17        | OR ATerm ATerm

  18  Type : AType

  19  AType : LPAREN Type RPAREN
  20        | BOOL
  21        | NAT

  22  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (22)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 15
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Term : IF . Term THEN Term ELSE Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 20
	AppTerm  goto 18
	ATerm  goto 19


state 4
	ATerm : TRUE .  (13)

	.  reduce 13


state 5
	ATerm : FALSE .  (14)

	.  reduce 14


state 6
	AppTerm : SUCC . ATerm  (9)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 21


state 7
	AppTerm : PRED . ATerm  (10)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 22


state 8
	AppTerm : ISZERO . ATerm  (11)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 23


state 9
	ATerm : INTV .  (15)

	.  reduce 15


state 10
	Term : SWITCH . Term CASE Zero COLON Term CASE SUCC Zero COLON Term  (6)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 24
	AppTerm  goto 18
	ATerm  goto 19


state 11
	ATerm : AND . ATerm ATerm  (16)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 25


state 12
	ATerm : OR . ATerm ATerm  (17)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 26


state 13
	toplevel : EOF .  (1)

	.  reduce 1


state 14
	ATerm : LPAREN . Term RPAREN  (12)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 27
	AppTerm  goto 18
	ATerm  goto 19


state 15
	%entry% : '\001' toplevel .  (22)

	.  reduce 22


state 16
	toplevel : Command . SEMI toplevel  (2)

	SEMI  shift 28
	.  error


state 17
	Command : Term .  (3)

	.  reduce 3


state 18
	Term : AppTerm .  (4)

	.  reduce 4


state 19
	AppTerm : ATerm .  (8)

	.  reduce 8


state 20
	Term : IF Term . THEN Term ELSE Term  (5)

	THEN  shift 29
	.  error


state 21
	AppTerm : SUCC ATerm .  (9)

	.  reduce 9


state 22
	AppTerm : PRED ATerm .  (10)

	.  reduce 10


state 23
	AppTerm : ISZERO ATerm .  (11)

	.  reduce 11


state 24
	Term : SWITCH Term . CASE Zero COLON Term CASE SUCC Zero COLON Term  (6)

	CASE  shift 30
	.  error


state 25
	ATerm : AND ATerm . ATerm  (16)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 31


state 26
	ATerm : OR ATerm . ATerm  (17)

	TRUE  shift 4
	FALSE  shift 5
	INTV  shift 9
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	ATerm  goto 32


state 27
	ATerm : LPAREN Term . RPAREN  (12)

	RPAREN  shift 33
	.  error


state 28
	toplevel : Command SEMI . toplevel  (2)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	EOF  shift 13
	LPAREN  shift 14
	.  error

	toplevel  goto 34
	Command  goto 16
	Term  goto 17
	AppTerm  goto 18
	ATerm  goto 19


state 29
	Term : IF Term THEN . Term ELSE Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 35
	AppTerm  goto 18
	ATerm  goto 19


state 30
	Term : SWITCH Term CASE . Zero COLON Term CASE SUCC Zero COLON Term  (6)

	INTV  shift 36
	.  error

	Zero  goto 37


state 31
	ATerm : AND ATerm ATerm .  (16)

	.  reduce 16


state 32
	ATerm : OR ATerm ATerm .  (17)

	.  reduce 17


state 33
	ATerm : LPAREN Term RPAREN .  (12)

	.  reduce 12


state 34
	toplevel : Command SEMI toplevel .  (2)

	.  reduce 2


state 35
	Term : IF Term THEN Term . ELSE Term  (5)

	ELSE  shift 38
	.  error


state 36
	Zero : INTV .  (7)

	.  reduce 7


state 37
	Term : SWITCH Term CASE Zero . COLON Term CASE SUCC Zero COLON Term  (6)

	COLON  shift 39
	.  error


state 38
	Term : IF Term THEN Term ELSE . Term  (5)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 40
	AppTerm  goto 18
	ATerm  goto 19


state 39
	Term : SWITCH Term CASE Zero COLON . Term CASE SUCC Zero COLON Term  (6)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 41
	AppTerm  goto 18
	ATerm  goto 19


state 40
	Term : IF Term THEN Term ELSE Term .  (5)

	.  reduce 5


state 41
	Term : SWITCH Term CASE Zero COLON Term . CASE SUCC Zero COLON Term  (6)

	CASE  shift 42
	.  error


state 42
	Term : SWITCH Term CASE Zero COLON Term CASE . SUCC Zero COLON Term  (6)

	SUCC  shift 43
	.  error


state 43
	Term : SWITCH Term CASE Zero COLON Term CASE SUCC . Zero COLON Term  (6)

	INTV  shift 36
	.  error

	Zero  goto 44


state 44
	Term : SWITCH Term CASE Zero COLON Term CASE SUCC Zero . COLON Term  (6)

	COLON  shift 45
	.  error


state 45
	Term : SWITCH Term CASE Zero COLON Term CASE SUCC Zero COLON . Term  (6)

	IF  shift 3
	TRUE  shift 4
	FALSE  shift 5
	SUCC  shift 6
	PRED  shift 7
	ISZERO  shift 8
	INTV  shift 9
	SWITCH  shift 10
	AND  shift 11
	OR  shift 12
	LPAREN  shift 14
	.  error

	Term  goto 46
	AppTerm  goto 18
	ATerm  goto 19


state 46
	Term : SWITCH Term CASE Zero COLON Term CASE SUCC Zero COLON Term .  (6)

	.  reduce 6


Rules never reduced:
	Type : AType  (18)
	AType : LPAREN Type RPAREN  (19)
	AType : BOOL  (20)
	AType : NAT  (21)


59 terminals, 10 nonterminals
23 grammar rules, 47 states
